--- a/index.html
+++ b/index.html
@@ -365,6 +365,7 @@
                   Estic creant un CRM amb el software FileMaker per una empresa que ven hipotèques.
                   <a
                     href="https://www.topbrokers.io/"
+                    target="_blank"
                     role="link"
                     class="inline-flex items-center text-lg font-medium text-yellow-500 dark:text-yellow-200 dark:hover:text-yellow-300 hover:text-yellow-700"
                   >
@@ -472,7 +473,7 @@
                       Code
                     </a>
                     <a
-                      href="https://svgl.vercel.app/"
+                      href="https://youtu.be/C4CXOmaELzY?si=pf76LnIE7-UKA-l9"
                       target="_blank"
                       role="link"
                       class="inline-flex items-center justify-center gap-2 px-3 py-2 space-x-2 text-base text-white transition bg-gray-800 border border-gray-600 focus-visible:ring-yellow-500/80 text-md hover:bg-gray-800 hover:border-gray-900 group max-w-fit rounded-xl hover:text-white focus:outline-none focus-visible:outline-none focus-visible:ring focus-visible:ring-white focus-visible:ring-offset-2 active:bg-black"
@@ -558,7 +559,7 @@
                       Code
                     </a>
                     <a
-                      href="https://adventjs.dev"
+                      href="https://drive.google.com/file/d/1rdmE7jN3MACWpTLuFeXSiJTc0RejablI/view?usp=drive_link"
                       target="_blank"
                       role="link"
                       class="inline-flex items-center justify-center gap-2 px-3 py-2 space-x-2 text-base text-white transition bg-gray-800 border border-gray-600 focus-visible:ring-yellow-500/80 text-md hover:bg-gray-800 hover:border-gray-900 group max-w-fit rounded-xl hover:text-white focus:outline-none focus-visible:outline-none focus-visible:ring focus-visible:ring-white focus-visible:ring-offset-2 active:bg-black"
@@ -615,7 +616,7 @@
               <path d="M6 21v-2a4 4 0 0 1 4 -4h4"></path>
               <path d="M15 19l2 2l4 -4"></path>
             </svg>
-            Sobre mí
+            Sobre mi
           </h2>
           <article
             class="flex flex-col items-center justify-center gap-8 text-gray-700 dark:text-gray-300 md:flex-row"
@@ -624,39 +625,21 @@
               class="[&>p]:mb-4 [&>p>strong]:text-yellow-500 dark:[&>p>strong]:text-yellow-100 [&>p>strong]:font-normal [&>p>strong]:font-mono text-pretty order-2 md:order-1"
             >
               <p>
-                Me llamo Miguel Ángel pero mis amigos me llaman midu. Empecé en
-                la programación con un Amstrad, tenía 10 años. Actualmente estoy
+                Em dic Nil Arilla i tinc 19 anys. Em considero una persona activa i amb moltes ganes d'aprendre. Actualment, estic cursant el segon any del
                 <strong
-                  >liderando equipos de desarrollo en multinacionales</strong
-                >.
+                  >CFGS DAW</strong
+                >. A més, estic treballant de pràctiques a Topbrokers.io.
               </p>
               <p>
-                Algunos de mis éxitos incluyen
+                Tinc moltes aficions, les més destacades són menjar i fer esport,
                 <strong
-                  >colaborar con Mozilla para el desarrollo de las primeras apps
-                  en su sistema FirefoxOS</strong
-                >. Aunque hoy está desaparecido fue un gran avance en el mundo
-                del desarrollo web.
+                  >en concret veure i jugar a futbol</strong
+                >. També m'agrada molt passar temps amb la família.
               </p>
               <p>
-                Como creador de contenido,
-                <strong
-                  >cuento con el canal de habla hispana más visto del mundo en
-                  la categoría de
-                  <em class="italic">Software & Game Development</em> en
-                  Twitch</strong
-                >. Mi objetivo es mejorar la empleabilidad de la comunidad
-                hispana y el acceso a contenido de calidad.
+                A la meva carrera com a programador, m'agradaria aspirar a treballar de qualsevol cosa que fos un repte per mi, ja que és el que necessites per no acabar estancat i seguir fent sempre el mateix, algo que a mi no m'agradaria gens, <strong>odio la monotonia</strong>.
               </p>
             </div>
-            <img
-              width="200"
-              height="200"
-              src="/me.png"
-              alt="Miguel Ángel"
-              class="order-1 object-cover w-64 h-full p-1 md:order-2 rotate-3 lg:p-2 lg:w-64 aspect-square rounded-2xl bg-black/20 dark:bg-yellow-500/5 ring-1 ring-black/70 dark:ring-white/20"
-              style="object-position: 50% 50%"
-            />
           </article>
           <!-- FRASES PROHIBIDAS EN VUESTRO PORTFOLIO
 
@@ -721,15 +704,15 @@
         >
           <li>
             <a href="/#sobre-mi" class="hover:underline me-4 md:me-6"
-              >Sobre mí</a
+              >Sobre mi</a
             >
           </li>
           <li>
             <a
               id="contacto"
-              href="mailto:miduga@gmail.com"
+              href="mailto:nil@arilla.es"
               class="hover:underline"
-              >Contacto</a
+              >Contacta amb mi</a
             >
           </li>
         </ul>
